# omniasr-server

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: aligners.py  audio.py  chunking.py  config.py  downloader.py  handlers.py  lid.py  logging_config.py  middleware.py  routes.py  schemas.py  segments.py  server.py  service.py
deploy/: Caddyfile  README.md  deploy.sh
fairseq2-assets/: issai_omini_11langs_new.yaml
scripts/: preload.py
tests/: test_audio.py  test_lid.py  test_routes.py  test_service.py
